--- a/index.html
+++ b/index.html
@@ -11,38 +11,40 @@
 			header
 		-->
   <header>
-    <div class="conteiner">
-      <div class="header-top">
-        <div class="logo"><h1>Техномарт</h1></div>
+    <div class="header-top">
+      <div class="container">
+        <div class="logo">
+          <h1>Техномарт</h1>
+        </div>
         <div class="search"><input type="search" placeholder="Поиск"></div>
-        <a class="bookmarks" href="#">Закладки</a>
-        <a class="basket" href="#">Корзина</a>
+        <a class="bookmarks" href="#">Закладки:0</a>
+        <a class="basket" href="#">Корзина:0</a>
         <a class="checkout" href="">Оформить заказ</a>
       </div>
       <div class="header-bottom">
-        <p>Интернет магазин строительных материалов и инструментов для ремонта
-        </p>
-        <div class="contacts">
-          <div class="tel">
+        <div class="container">
+          <p>Интернет магазин строительных материалов и инструментов для ремонта
+          </p>
+          <div class="contacts">
             <a href="tel:+78125550555">+7 (812)555-05-55 </a>
+            <p>г. Санкт-Петербург. ул. Б. Конюшенная д. 19/8</p>
           </div>
-          <p>г. Санкт-Петербург. ул. Б. Конюшенная д. 19/8</p>
+          <div class="user-block">
+            <a href="">Вход</a>
+            <a href="">Регистация</a>
+          </div>
+          <nav class="header-nav">
+            <ul>
+              <li><a href="">Главная</a></li>
+              <li><a href="">Компания</a></li>
+              <li><a href="">Каталог</a></li>
+              <li><a href="">Новости</a></li>
+              <li><a href="">Спецпредложения</a></li>
+              <li><a href="">Доставка</a></li>
+              <li><a href="">Контакты</a></li>
+            </ul>
+          </nav>
         </div>
-        <div class="user-block">
-          <a href="">Вход</a>
-          <a href="">Регистация</a>
-        </div>
-        <nav class="header-nav">
-          <ul>
-            <li><a href="">Главная</a></li>
-            <li><a href="">Компания</a></li>
-            <li><a href="">Каталог</a></li>
-            <li><a href="">Новости</a></li>
-            <li><a href="">Спецпредложения</a></li>
-            <li><a href="">Доставка</a></li>
-            <li><a href="">Контакты</a></li>
-          </ul>
-        </nav>
       </div>
     </div>
   </header>
@@ -50,151 +52,152 @@
 			main
 		-->
   <main>
-    <div class="conteiner">
-      <div class="top-main">
-        <div class="offers">
-          <div class="sliders">
-            <div class="slide">
-              <h2>Перфораторы</h2>
-              <p>Настроящие мужские игрушки</p>
-              <a class="button" href="#">Открыть католог</a>
-            </div>
-            <div class="slide">
-              <h2>Дрели</h2>
-              <p>Соседям на радость</p>
-              <a class="button" href="#">Открыть католог</a>
-            </div>
+    <div class="container">
+      <div class="offers">
+        <div class="sliders">
+          <div class="slide">
+            <h2>Перфораторы</h2>
+            <p>Настроящие мужские игрушки</p>
+            <a class="button" href="#">Открыть католог</a>
           </div>
-          <div class="categories">
-            <ul>
-              <li>
-                <h3>Материалы</h3>
-                <a class="button-category" href="#">На любой вкус</a>
-              </li>
-              <li>
-                <h3>Инструмент</h3>
-                <a class="button-category" href="#">На все случаи</a>
-              </li>
-              <li>
-                <h3>Техника</h3>
-                <a class="button-category" href="#">Для стройки</a>
-              </li>
-              <li>
-                <h3>Скидки 50%</h3>
-                <a class="button-category" href="#">На 350 товаров</a>
-              </li>
-              <li>
-                <h3>Доставка</h3>
-                <a class="button-category" href="#">Бесплатно</a>
-              </li>
-            </ul>
+          <div class="slide">
+            <h2>Дрели</h2>
+            <p>Соседям на радость</p>
+            <a class="button" href="#">Открыть католог</a>
           </div>
         </div>
-        <!--
-		популярные товары
-		-->
-        <section class="popular-product">
-          <div class="popular">
-            <h2>Популярные товары:</h2>
-            <a class="button" href="">все популярные товары </a>
-          </div>
-          <ul class="popular-product-list">
-            <li class="popular-product-item">
-              <div class="actions">
-                <a href="#">Купить</a>
-                <a href="">В закладки</a>
-              </div>
-              <h3>Перфоратор Bosch BFG 9000</h3>
-              <div class="popular-image">
-                <img src="http://placehold.it/150x100" alt="Перфоратор Bosch BFG 9000">
-              </div>
-              <span class="oldvalue">32300 P.</span>
-              <span class="newvalue"><a class="button" href="">25500 Р.</a></span>
+        <div class="categories">
+          <ul>
+            <li>
+              <h3>Материалы</h3>
+              <a class="button-category" href="#">На любой вкус</a>
             </li>
-            <li class="popular-product-item">
-              <div class="actions">
-                <a href="#">Купить</a>
-                <a href="">В закладки</a>
-              </div>
-              <h3> Перфоратор Bosch BFG 3000</h3>
-              <p class="popular-product-item-image">
-                <a href="">
-             <img src="http://placehold.it/150x100" alt="Перфоратор Bosch BFG 3000">
-            </a>
-              </p>
-              <span class="oldvalue">22500 P.</span>
-              <span class="newvalue"><a class="button" href="">15500 Р.</a></span>
+            <li>
+              <h3>Инструмент</h3>
+              <a class="button-category" href="#">На все случаи</a>
             </li>
-            <li class="popular-product-item">
-              <div class="actions">
-                <a href="#">Купить</a>
-                <a href="">В закладки</a>
-              </div>
-              <h3>Перфоратор Bosch BFG 6000</h3>
-              <p class="popular-product-item-image">
-                <a href="">
-              <img src="http://placehold.it/150x100" alt=">Перфоратор Bosch BFG 6000">
-            </a>
-              </p>
-              <span class="oldvalue">30500 P.</span>
-              <span class="newvalue"><a class="button" href="">25500 Р.</a></span>
+            <li>
+              <h3>Техника</h3>
+              <a class="button-category" href="#">Для стройки</a>
             </li>
-            <li class="popular-product-item">
-              <div class="actions">
-                <a href="#">Купить</a>
-                <a href="">В закладки</a>
-              </div>
-              <h3>Перфоратор Bosch BFG 2000</h3>
-              <p class="popular-product-item-image">
-                <a href="">
-             <img src="http://placehold.it/150x100" alt="Перфоратор Bosch BFG 2000">
-           </a>
-              </p>
-              <span class="newvalue">
-              <a class="button" href="">12500 Р.</a></span>
+            <li>
+              <h3>Скидки 50%</h3>
+              <a class="button-category" href="#">На 350 товаров</a>
+            </li>
+            <li>
+              <h3>Доставка</h3>
+              <a class="button-category" href="#">Бесплатно</a>
             </li>
           </ul>
-        </section>
-        <!--
-		популярные произодители
-		-->
-        <section class="popular-manufacturer">
-          <div class="popular">
-            <h2>Популярные произовители:</h2>
-            <a class="button" href="">все произовители  </a>
-          </div>
-          <ul class="popula-manufacturer-list">
-            <li class="popula-manufacturer-item">
-              <a href=""><img src="http://placehold.it/150x100" alt="bosch"></a>
-            </li>
-            <li class="popula-manufacturer-item">
-              <a href=""><img src="http://placehold.it/150x100" alt="makita"></a>
-            </li>
-            <li class="popula-manufacturer-item">
-              <a href=""><img src="http://placehold.it/150x100" alt="dewalt"></a>
-            </li>
-            <li class="popula-manufacturer-item">
-              <a href=""><img src="http://placehold.it/150x100" alt="интерскол"></a>
-            </li>
-            <li class="popula-manufacturer-item">
-              <a href=""><img src="http://placehold.it/150x100" alt="hitachi"></a>
-            </li>
-            <li class="popula-manufacturer-item">
-              <a href=""><img src="http://placehold.it/150x100" alt="lg"></a>
-            </li>
-            <li class="popula-manufacturer-item">
-              <a href=""><img src="http://placehold.it/150x100" alt="aeg"></a>
-            </li>
-            <li class="popula-manufacturer-item">
-              <a href=""> <img src="http://placehold.it/150x100" alt="metabo"></a>
-            </li>
-          </ul>
-        </section>
+        </div>
       </div>
       <!--
+		популярные товары
+		-->
+      <section class="popular-product">
+        <div class="popular">
+          <h2>Популярные товары:</h2>
+          <a class="button" href="">все популярные товары </a>
+        </div>
+        <ul class="popular-product-list">
+          <li class="popular-product-item">
+            <div class="actions">
+              <a href="#">Купить</a>
+              <a href="">В закладки</a>
+            </div>
+            <h3>Перфоратор Bosch BFG 9000</h3>
+            <div class="popular-image">
+              <img src="http://placehold.it/150x100" alt="Перфоратор Bosch BFG 9000">
+            </div>
+            <span class="oldprice">32300 P.</span>
+            <span class="newprice"><a class="button" href="">25500 Р.</a></span>
+          </li>
+          <li class="popular-product-item">
+            <div class="actions">
+              <a href="#">Купить</a>
+              <a href="">В закладки</a>
+            </div>
+            <h3> Перфоратор Bosch BFG 3000</h3>
+            <p class="popular-product-item-image">
+              <a href="">
+             <img src="http://placehold.it/150x100" alt="Перфоратор Bosch BFG 3000">
+            </a>
+            </p>
+            <span class="oldprice">22500 P.</span>
+            <span class="newprice"><a class="button" href="">15500 Р.</a></span>
+          </li>
+          <li class="popular-product-item">
+            <div class="actions">
+              <a href="#">Купить</a>
+              <a href="">В закладки</a>
+            </div>
+            <h3>Перфоратор Bosch BFG 6000</h3>
+            <p class="popular-product-item-image">
+              <a href="">
+              <img src="http://placehold.it/150x100" alt=">Перфоратор Bosch BFG 6000">
+            </a>
+            </p>
+            <span class="oldprice">30500 P.</span>
+            <span class="newprice"><a class="button" href="">25500 Р.</a></span>
+          </li>
+          <li class="popular-product-item">
+            <div class="actions">
+              <a href="#">Купить</a>
+              <a href="">В закладки</a>
+            </div>
+            <h3>Перфоратор Bosch BFG 2000</h3>
+            <p class="popular-product-item-image">
+              <a href="">
+             <img src="http://placehold.it/150x100" alt="Перфоратор Bosch BFG 2000">
+           </a>
+            </p>
+            <span class="newprice">
+              <a class="button" href="">12500 Р.</a></span>
+          </li>
+        </ul>
+      </section>
+      <!--
+		популярные произодители
+		-->
+      <section class="popular-manufacturer">
+        <div class="popular-heafer">
+          <h2>Популярные производители:</h2>
+          <a class="button" href="">Все производители</a>
+        </div>
+        <ul class="popular-manufacturer-list">
+          <li class="popula-manufacturer-item">
+            <a href=""><img src="http://placehold.it/150x100" alt="bosch"></a>
+          </li>
+          <li class="popular-manufacturer-item">
+            <a href=""><img src="http://placehold.it/150x100" alt="makita"></a>
+          </li>
+          <li class="popular-manufacturer-item">
+            <a href=""><img src="http://placehold.it/150x100" alt="dewalt"></a>
+          </li>
+          <li class="popular-manufacturer-item">
+            <a href=""><img src="http://placehold.it/150x100" alt="интерскол"></a>
+          </li>
+          <li class="popular-manufacturer-item">
+            <a href=""><img src="http://placehold.it/150x100" alt="hitachi"></a>
+          </li>
+          <li class="popular-manufacturer-item">
+            <a href=""><img src="http://placehold.it/150x100" alt="lg"></a>
+          </li>
+          <li class="popular-manufacturer-item">
+            <a href=""><img src="http://placehold.it/150x100" alt="aeg"></a>
+          </li>
+          <li class="popular-manufacturer-item">
+            <a href=""> <img src="http://placehold.it/150x100" alt="metabo"></a>
+          </li>
+        </ul>
+      </section>
+    </div>
+    <!--
 		Сервисы
 		-->
+    <div class="container">
       <section class="service">
+        <h2>Сервисы</h2>
         <p class="">Хороший интернет-магазин отличается от плохого не только ценами!мы стараемся изо всех сил, чтобы сделать покупки приятными.</p>
         <!--
 		Доставка Гарантия Кредит
@@ -218,6 +221,8 @@
           <div class="service-help-Credit">Кредит</div>
         </div>
       </section>
+    </div>
+    <div class="container">
       <section class="about-company">
         <div class="about-company-left">
           <h2>Компания "ТЕХНОМАРТ"</h2>
@@ -237,54 +242,58 @@
         <div class="about-company-right">
           <h2>Контакты</h2>
           <p>Вы можете забрать товар сами, заехав в наш офис:</p>
+          <a class="map" href="#">Карта</a>
           <a class="button" href="">Заблудились? напишите нам</a>
         </div>
       </section>
     </div>
   </main>
   <footer class="footer">
-   <div class="conteiner">
-    <div class="top-footer">
-      <h1>Техномарт</h1>
-      <ul class="top-footer-navigation">
-        <li><a href="">Компания</a></li>
-        <li><a href="">Новости</a></li>
-        <li><a href="">Каталог</a></li>
-        <li><a href="">Доставка</a></li>
-        <li><a href="">Контакты</a></li>
-      </ul>
-    </div>
-    <div class="footer-center">
-      <p>г. Санкт-Петербург. ул. Б. Конюшенная д. 19/8</p>
-      <ul class="footer-center-nav">
-        <li><a href="">Материалы</a></li>
-        <li><a href="">Техника</a></li>
-        <li><a href="">Инструмент</a></li>
-        <li><a href="">Спецпредложения</a></li>
-      </ul>
+    <div class="container">
+      <div class="top-footer">
+        <div class="logo">
+          <h1>Техномарт</h1>
+        </div>
+        <ul class="top-footer-navigation">
+          <li><a href="">Компания</a></li>
+          <li><a href="">Новости</a></li>
+          <li><a href="">Каталог</a></li>
+          <li><a href="">Доставка</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+        <div class="footer-center">
+          <p>г. Санкт-Петербург. ул. Б. Конюшенная д. 19/8</p>
+          <ul class="footer-center-nav">
+            <li><a href="">Материалы</a></li>
+            <li><a href="">Техника</a></li>
+            <li><a href="">Инструмент</a></li>
+            <li><a href="">Спецпредложения</a></li>
+          </ul>
+        </div>
+      </div>
     </div>
     <div class="bottom-footer">
-      <p class="about-contacts">
-        2010-2017 Компания "Техномарт" <br> Все права защищены
-      </p>
-      <div class="footer-social">
-        <ul>
-          <li><a class="social-button" href="#">Вконтакте</a></li>
-          <li><a class="social-button" href="#">Фейсбук</a></li>
-          <li><a class="social-button" href="#">Инстаграм</a></li>
-        </ul>
+      <div class="container">
+        <p class="about-contacts">
+          2010-2017 Компания "Техномарт" <br> Все права защищены
+        </p>
+        <div class="footer-social">
+          <ul>
+            <li><a class="social-button" href="#">Вконтакте</a></li>
+            <li><a class="social-button" href="#">Фейсбук</a></li>
+            <li><a class="social-button" href="#">Инстаграм</a></li>
+          </ul>
+        </div>
+        <p class="footer-mail">
+          <b>Обратная связь:</b>
+          <a class="button" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+        </p>
+        <p class="footer-copyright">
+          <b>Разработано:</b>
+          <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+        </p>
       </div>
-      <p class="footer-mail">
-        <b>Обратная связь:</b>
-        <a class="button" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-      </p>
-      <p class="footer-copyright">
-        <b>Разработано:</b>
-        <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
-      </p>
-    </div>
     </div>
   </footer>
 </body>
-
 </html>
